# crayon

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
crayon-examples/: Cargo.toml  build.rs  core_input.rs  core_render_texture.rs  core_texture.rs  input.rs  modules_prefab.rs  video_render_texture.rs  video_texture.rs
crayon-examples/assets/: cornell_box.mtl  render_target_p1.vs.meta.toml  render_target_p2.fs.meta.toml  render_target_p2.vs.meta.toml  texture.vs.meta.toml
crayon-examples/resources/: .MANIFEST  1926AF68943F49528FBEB7B5FF3A49E1  2E76FDC18FAE49578231CBC3ACAA452A  6F0C4447040F47C28F48BB8284DF5678  C068505200DB4C8581E9C2BCEAB81DA6  D0CB0AC2AC6949C998CBF5841751B3FD  D1DBF1853AC249B7853C16D7CE9CF3C7
crayon-examples/src/: errors.rs  main.rs
crayon-examples/src/canvas/: mod.rs
crayon-examples/src/imgui/: mod.rs
crayon-examples/src/input/: mod.rs
crayon-examples/src/mesh/: mod.rs
crayon-examples/src/render_target/: mod.rs
crayon-examples/src/texture/: mod.rs
crayon-examples/src/utils/: console.rs  mod.rs
crayon-examples/testbed/: Cargo.toml
crayon-examples/testbed/src/: console.rs  errors.rs  lib.rs
crayon-runtime/: Cargo.toml
crayon-runtime/examples/: render_target.rs  sprite.rs
crayon-runtime/src/: lib.rs  prelude.rs
crayon-runtime/src/application/: engine.rs  mod.rs  settings.rs  window.rs
crayon-runtime/src/core/: application.rs  engine.rs  errors.rs  event.rs  input.rs  mod.rs  settings.rs  window.rs
crayon-runtime/src/ecs/: component.rs  iterator.rs  mod.rs  world.rs
crayon-runtime/src/graphics/: color.rs  errors.rs  frame.rs  frontend.rs  graphics.rs  mod.rs  pipeline.rs  resource.rs
crayon-runtime/src/math/: bounds.rs  color.rs  mod.rs
crayon-runtime/src/resource/: archive.rs  atlas.rs  backend.rs  bytes.rs  cache.rs  errors.rs  frontend.rs  manifest.rs  material.rs  mod.rs  primitive.rs  resource.rs  serialization.rs  shader.rs  system.rs  texture.rs
crayon-runtime/src/resource_exts/: cache.rs  errors.rs  filesystem.rs  mod.rs  resource.rs
crayon-runtime/src/scene/: camera.rs  errors.rs  light.rs  mesh.rs  mesh_renderer.rs  mod.rs  rect.rs  renderer.rs  scene.rs  scene2d.rs  sprite.rs  sprite_renderer.rs  transform.rs
crayon-runtime/src/utility/: handle_object_set.rs  mod.rs
crayon-runtime/src/utils/: handle_set.rs  hash.rs  mod.rs
crayon-runtime/tests/: ecs.rs  filesystem.rs  resource.rs  transform.rs
crayon-workflow/: Cargo.toml  README.md  build.rs
crayon-workflow/src/: errors.rs  lib.rs  main.rs  manifest.rs  platform.rs  prelude.rs  serialization.rs
crayon-workflow/src/resource/: atlas.rs  bytes.rs  database.rs  material.rs  metadata.rs  mod.rs  shader.rs  texture.rs
crayon-workflow/src/shader_compiler/: _parser.rs  ast.rs  errors.rs  mod.rs  parser.rs
crayon-workflow/src/shaderc/: mod.rs
crayon-workflow/src/subcommand/: build.rs  mod.rs  new.rs  run.rs
crayon-workflow/src/utils/: bincode.rs  json.rs  mod.rs  toml.rs  yaml.rs
crayon-workflow/src/workspace/: database.rs  manifest.rs  mod.rs
crayon-workflow/template/: Cargo.toml  Crayon.toml
crayon-workflow/template/resources/: setup.json
crayon-workflow/template/src/: main.rs
crayon-workflow/tests/: database.rs  manifest.rs  resource.rs
crayon-workflow/tests/resources/: Crayon.toml
crayon-workflow/tests/utils/: mod.rs
crayon-workflow/tests/workspace/: Crayon.toml  workspace.toml
examples/: 3d_mesh.rs  Cargo.toml  README.md  canvas.rs  cube.rs  env.rs  imgui.rs  input.rs  modules_3d_prefab.rs  network.rs  prelude.rs  render_target.rs  render_texture.rs  sprite.rs  texture.rs  video_render_texture.rs  video_texture.rs  window.rs  workspace.toml
examples/assets/: cornell_box.obj.meta.toml  crate.bmp.meta.toml  music.mp3.meta.toml  render_target_p1.fs.meta.toml  sfx.ogg.meta.toml  texture.fs.meta.toml  texture.png.meta.toml
examples/assets/scripts/: main.lua  main.lua.meta.toml
examples/resources/: .MANIFEST  161B0FAA72454C68B5E797ACAB9C2833  2943B9386A274730A50702A904F384D5  427EB273E77446B8B7010ACE1B7652EE  4572A4B5C9F146BD84517F6FA535FAE6  64CD2E4E19494718AD79BEC5F4CD5600  BF169152A5D8461BA9C3C959DAA80A2E  C8CB6C9933E24A2BA25F4B5BAA5F4C6A  E32F80DF6B5946D9B49E4651AAF8A64E  F22C83C0B7A3468DB13403971AB04402  MANIFEST  atlas.json
examples/resources/configs/: basic.json
examples/resources/shaders/: render_target_p1.fs  render_target_p1.vs  render_target_p2.fs  render_target_p2.vs  texture.fs  texture.vs
examples/src/3d/: cube.rs  prefab.rs  saturn.rs
examples/src/audio/: audio.rs  audio_3d.rs
examples/src/core/: input.rs  render_texture.rs  texture.rs
examples/src/imgui/: imgui.rs
examples/src/lua/: lua.rs
examples/src/testbed/: Cargo.toml
examples/support/: mod.rs
examples/testbed/: Cargo.toml
examples/testbed/src/: console.rs  lib.rs
examples/utils/: mod.rs
modules/2d/: Cargo.toml
modules/2d/src/: lib.rs  world.rs
modules/3d/: Cargo.toml
modules/3d/assets/: pbr.fs  phong.fs  shadow.fs  shadow.vs  simple.fs  simple.vs  undefined.fs  undefined.vs
modules/3d/src/: component.rs  ent.rs  errors.rs  lib.rs  resources.rs  scene.rs  standard.rs  tags.rs  world.rs  world_resources.rs
modules/3d/tests/: node.rs  scene.rs  scene_graph.rs  tags.rs  transform.rs  world.rs
modules/audio/: Cargo.toml  README.md
modules/audio/examples/: audio.rs
modules/audio/src/: lib.rs  mixer.rs  source.rs  system.rs
modules/bytes/: Cargo.toml  README.md
modules/bytes/examples/: bytes.rs
modules/bytes/src/: lib.rs  system.rs
modules/canvas/: Cargo.toml
modules/canvas/resources/: canvas.fs  canvas.vs
modules/canvas/src/: canvas.rs  errors.rs  lib.rs  node.rs  prelude.rs  renderer.rs
modules/canvas/tests/: node.rs
modules/imgui/: Cargo.toml
modules/imgui/assets/: imgui.vs
modules/imgui/resources/: imgui.fs
modules/imgui/src/: canvas.rs  errors.rs  lib.rs  prelude.rs  renderer.rs
modules/lua/: Cargo.toml
modules/lua/src/: lib.rs
modules/scene/: Cargo.toml  README.md
modules/scene/assets/: phong.fs  phong.vs  (+1 more)
modules/world/: Cargo.toml
(+540 files in other folders)
