[package]
name = "crayon"
version = "0.5.0"
authors = [ "Jingkai Mao <oammix@gmail.com>" ]
description = "A small, portable and extensible game framework."
repository = "https://github.com/shawnscode/crayon"
documentation = "http://docs.rs/crayon"
readme = "README.md"
license = "Apache-2.0"

keywords = ["ecs", "entity-component", "game-dev", "multithread"]
categories = ["game-engines", "multimedia"]

[badges]
travis-ci = { repository = "shawnscode/crayon", branch = "master" }
appveyor = { repository = "shawnscode/crayon", branch = "master", service = "github" }
codecov = { repository = "shawnscode/crayon", branch = "master", service = "github" }

[workspace]
members = [ "modules/imgui", "modules/3d" ]

[dependencies]
gl = "0.10.0"
glutin = "0.17.0"
crossbeam-deque = "0.5.1"
failure = "0.1.1"
log = "0.4.4"

serde = { version = "1.0.70", features = ["serde_derive"] }
bincode = "1.0.1"

uuid = { version = "0.6.5", features = ["serde"] }
cgmath = { version = "0.16.1", features = ["serde"] }

[dev-dependencies]
crayon-testbed = { path = "examples/testbed" }
rand = "0.5.4"