[package]
name = "crayon"
version = "0.7.0"
authors = [ "Jingkai Mao <oammix@gmail.com>" ]
description = "A small, portable and extensible game framework."
repository = "https://github.com/shawnscode/crayon"
documentation = "http://docs.rs/crayon"
readme = "README.md"
license = "Apache-2.0"

keywords = ["ecs", "entity-component", "game-dev", "multithread"]
categories = ["game-engines", "multimedia"]

[badges]
travis-ci = { repository = "shawnscode/crayon", branch = "master" }
appveyor = { repository = "shawnscode/crayon", branch = "master", service = "github" }
codecov = { repository = "shawnscode/crayon", branch = "master", service = "github" }

[workspace]
members = [ "examples", "modules/imgui", "modules/3d", "modules/audio" ]

[dependencies]
gl = "0.10.0"
glutin = "0.18.0"
crossbeam-deque = "0.5.1"
failure = "0.1.2"
log = "0.4.5"

serde = { version = "1.0.79", features = ["serde_derive"] }
serde_json = { version = "1.0.32" }

bincode = "1.0.1"
byteorder = "1.2.6"

uuid = { version = "0.7.1", features = ["serde"] }
cgmath = { version = "0.16.1", features = ["serde"] }

[dev-dependencies]
rand = "0.5.5"