[package]
name = "crayon-examples"
version = "0.5.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]
build = "build.rs"

[badges]
travis-ci = { repository = "shawnscode/crayon", branch = "master" }

[dependencies]
crayon = { path = "..", version = "0.5.0" }
crayon-imgui = { path = "../crayon-modules/imgui", version = "0.5.0" }
# crayon-3d = { path = "../modules/3d", version = "0.5.0" }
failure = "0.1.1"
image = "0.18.0"
obj = "0.8.2"
rand = "0.5.4"

[build-dependencies]
crayon-workflow = { path = "../crayon-tools/workflow", version = "0.5.0" }