[package]
name = "crayon-examples"
version = "0.1.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]

[badges]
travis-ci = { repository = "shawnscode/crayon", branch = "master" }

[dependencies]
crayon = { path = ".." }
crayon-testbed = { path = "testbed" }

[[bin]]
name = "video_render_texture"
path = "video_render_texture.rs"

[[bin]]
name = "video_texture"
path = "video_texture.rs"

[[bin]]
name = "imgui"
path = "imgui.rs"

[[bin]]
name = "input"
path = "input.rs"