[package]
name = "crayon"
version = "0.0.5"
authors = [ "Jingkai Mao <oammix@gmail.com>" ]

description = "An experimental entity-component-based multithread game engine."
repository = "https://github.com/shawnscode/crayon"
documentation = "http://docs.rs/crayon"
readme = "../README.md"
license = "Apache-2.0"

keywords = ["ecs", "entity-component", "game-dev", "multithread"]
categories = ["game-engines", "multimedia"]

[badges]
travis-ci = { repository = "shawnscode/crayon", branch = "master" }

[dependencies]
libc = "0.2.30"
gl = "0.6.3"
lazy_static = "0.2.8"
error-chain = "0.11.0"
derive_builder = "0.5.0"

glutin = "0.9.2"
rayon = "0.8.2"
futures = "0.1.16"

byteorder = "1.1.0"
approx = "0.1.1"
cgmath = "0.15.0"
rand = "0.3.16"
uuid = { version = "0.5.1", features = ["serde", "v4"] }

bit-set = "0.4.0"

serde = "1.0.15"
serde_derive = "1.0.15"
bincode = "0.8.0"

zip = "0.2.6"
image = "0.15.0"