[package]
name = "crayon_workflow"
version = "0.0.2"
authors = ["Jingkai Mao <oammix@gmail.com>"]

[dependencies]
crayon = { path = "../crayon-runtime" }
error-chain = "0.10.0"

serde = "1.0.8"
serde_derive = "1.0.8"
serde_yaml = "0.7.1"
serde_json = "1.0"
bincode = "0.8.0"
toml = "0.4"

uuid = { version = "0.5.1", features = ["serde", "v4"] }
seahash = "3.0.5"

image = "0.14.0"
walkdir = "1.0.7"

[build-dependencies]