[package]
name = "crayon-examples"
version = "0.0.0"
authors = [ "Jingkai Mao <oammix@gmail.com>" ]

[dependencies]
crayon-testbed = { path = "src/testbed" }

[[bin]]
name = "render_texture"
path = "src/core/render_texture.rs"

[[bin]]
name = "texture"
path = "src/core/texture.rs"

[[bin]]
name = "input"
path = "src/core/input.rs"

[[bin]]
name = "imgui"
path = "src/imgui/imgui.rs"

[[bin]]
name = "prefab"
path = "src/3d/prefab.rs"