[package]
name = "crayon-2d"
version = "0.7.0"
authors = ["maojingkai <oammix@gmail.com>"]

[dependencies]
crayon = { path = "../../", version = "0.7.0" }
crayon-lua = { path = "../lua", version = "0.7.0", optional = true }
serde = { version = "1.0.79", features = ["serde_derive"] }
failure = "0.1.2"

[features]
lua = [ "crayon-lua" ]
# litswf = [ "crayon-litswf" ]