[package]
name = "crayon-3d"
version = "0.5.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "The scene module of crayon."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev", "scene", "3d"]
categories = ["multimedia", "game-engines"]

[dependencies]
crayon = { path = "../../", version = "0.5.0" }
failure = "0.1.1"

[dev-dependencies]
rand = "0.5.4"
approx = "0.3.0"