[package]
name = "crayon-3d"
version = "0.1.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "Just another 3d module."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev", "scene", "3d"]
categories = ["multimedia", "game-engines"]

[dependencies]
crayon = { path = "../../", version = "0.6.0" }
serde = { version = "1.0.79", features = ["serde_derive"] }
failure = "0.1.2"

[dev-dependencies]
rand = "0.5.5"