[package]
name = "crayon-audio"
version = "0.6.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "The audio module of crayon game framework."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev", "audio"]
categories = ["multimedia", "game-engines"]

[dependencies]
crayon = { path = "../../", version = "0.6.0" }
cpal = "0.8.2"
lewton = "0.9.0"
failure = "0.1.2"
