[package]
name = "crayon-canvas"
version = "0.0.6"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "Crayon's canvas module."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "entity-component", "game-dev", "ui", "canvas"]
categories = ["game-engines", "multimedia", "gui"]

[badges]
travis-ci = { repository = "shawnscode/crayon", branch = "master" }

[dependencies]
crayon = { path = "../../", version = "0.0.6" }
lazy_static = "1.0.0"
error-chain = "0.11.0"

rusttype = "0.3.0"
unicode-normalization = "0.1.5"

[dev-dependencies]
rand = "0.3.18"