[package]
name = "crayon-imgui"
version = "0.0.8"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "Crayon's ImGui."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev", "ui", "gui"]
categories = ["multimedia", "gui"]

[dependencies]
crayon = { path = "../../", version = "0.0.8" }
imgui = "0.0.17"
error-chain = "0.11.0"