[package]
name = "crayon-imgui"
version = "0.1.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "Just another ImGui module."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev", "ui", "gui"]
categories = ["multimedia", "gui"]

[dependencies]
crayon = { path = "../../", version = "0.5.1" }
imgui = "0.0.18"