[package]
name = "crayon-lua"
version = "0.7.0"
authors = ["maojingkai <oammix@gmail.com>"]

[dependencies]
crayon = { path = "../../", version = "0.7.0" }
crayon-audio = { path = "../audio", version = "0.7.0", optional = true }
failure = "0.1.2"
rlua = "0.14.2"

[features]
audio = [ "crayon-audio" ]