[package]
name = "crayon-scene"
version = "0.1.0"
authors = ["Jingkai Mao <oammix@gmail.com>"]
description = "Crayon's scene module."
repository = "https://github.com/shawnscode/crayon"
license = "Apache-2.0"
keywords = ["crayon", "game-dev"]
categories = ["multimedia", "game-engines"]

[dependencies]
crayon = { path = "../../", version = "0.1.0" }
error-chain = "0.11.0"

[dev-dependencies]
rand = "0.3.18"