[package]
name = "crayon-testbed"
version = "0.0.0"
authors = ["maojingkai <oammix@gmail.com>"]

[dependencies]
crayon = { path = "../../.." }
crayon-lua = { path = "../../../modules/lua" }
crayon-imgui = { path = "../../../modules/imgui" }
crayon-3d = { path = "../../../modules/3d" }
crayon-2d = { path = "../../../modules/2d", features = [ "lua" ] }
crayon-audio = { path = "../../../modules/audio" }
env_logger = "0.5.13"
rand = "0.5.5"